--- a/src/layouts/header/header.scss
+++ b/src/layouts/header/header.scss
@@ -1,30 +1,146 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #0E1423;
-    color: white;
-    height: 60px;
 
-    .hLeft {
-        display: flex;
+@media screen and (max-width: 120000px) {
+    .header {
+        padding: 50px 0;
 
-        div {
-            margin: 0px 10px;
-            font-size: 19px;
-        }
-    }
+        .container {
+            display: flex;
+            justify-content: space-between;
 
-    .hRight {
-        display: flex;
+            .logo {
 
-        div {
-            margin: 0px 10px;
-            a {
-                text-decoration: none;
-                color: white;
-                font-size: 22px;
+            }
+            .burgerMenu {
+                display: none;
+
+            }
+
+            .routesCont {
+
+                ul {
+                    list-style: none;
+                    display: flex;
+                    padding: 0;
+                    margin: 0;
+
+                    a {
+                        text-decoration: none;
+                        padding: 8px 15px;
+                        cursor: pointer;
+                        text-transform: capitalize;
+                        display: block;
+                    }
+
+                    .liBottomHover::after {
+                        content: '';
+                        display: block;
+                        margin: auto;
+                        left: 51%;
+                        right: 51%;
+                        height: 1px;
+                        width: 0px;
+                        transition-duration: 0.3s;
+                        transition-timing-function:cubic-bezier(0.39, 0.575, 0.565, 1);
+
+                    }
+
+                    .liBottomHover:hover:after {
+                        background: black;
+                        width: 100%
+
+                    }
+                    
+                    /* 
+                    a::after {
+                        content: '';
+                        display: block;
+                        margin: auto;
+                        height: 1px;
+                        width: 0px;
+                        left: 51%;
+                        right: 51%;
+                        background: transparent;
+                        transition: width .5s ease, background-color .5s ease;
+                    }
+                    a:hover:after {
+                      width: 100%;
+                      background: black;
+                    } */
+                }
+
             }
         }
     }
+
+}
+
+
+
+@media screen and (max-width: 1200px) {
+    .header {
+
+        .container {
+            .burgerMenu {
+            }
+        }
+    }
+
+}
+
+@media screen and (max-width: 999px) {
+    .header {
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+
+            
+            .burgerMenu {
+                display: block;
+
+            }
+
+            .routesCont {
+                flex-basis: 100%;
+                // display: none;
+                ul {
+                    display: block!important;
+
+                    .routeBox {
+                        margin: 20px auto;
+                        text-align: center;
+                        width: fit-content;
+                        text-align: center;
+                    }
+                }
+                
+            }
+        }
+    }
+
+}
+
+@media screen and (max-width: 676px) {
+    .header {
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+
+            
+            .burgerMenu {
+
+            }
+
+            .routesCont {
+                flex-basis: 100%;
+                // display: none;
+                ul {
+                    display: block!important;
+                }
+                
+            }
+        }
+    }
+    
 }
