--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
   .header .container {
     display: flex;
     justify-content: space-between;
+    width: 1140px;
+    margin: 0 auto;
   }
   .header .container .burgerMenu {
     display: none;
@@ -21,22 +23,6 @@
     display: flex;
     padding: 0;
     margin: 0;
-    /* 
-    a::after {
-        content: '';
-        display: block;
-        margin: auto;
-        height: 1px;
-        width: 0px;
-        left: 51%;
-        right: 51%;
-        background: transparent;
-        transition: width .5s ease, background-color .5s ease;
-    }
-    a:hover:after {
-      width: 100%;
-      background: black;
-    } */
   }
   .header .container .routesCont ul a {
     text-decoration: none;
@@ -61,31 +47,65 @@
     width: 100%;
   }
 }
+@media screen and (max-width: 1200px) {
+  .header .container {
+    width: 960px;
+  }
+}
 @media screen and (max-width: 999px) {
+  .header {
+    position: relative;
+  }
   .header .container {
     display: flex;
     flex-wrap: wrap;
+    width: 720px;
+  }
+  .header .container .logo {
+    z-index: 999;
   }
   .header .container .burgerMenu {
     display: block;
+    z-index: 999;
+  }
+  .header .container .visibleBar {
+    visibility: visible;
+    opacity: 1;
   }
   .header .container .routesCont {
-    flex-basis: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: red;
   }
   .header .container .routesCont ul {
     display: block !important;
+    width: 720px;
+    margin: 0 auto;
+    /* .routeBox {
+        margin: 20px auto;
+        text-align: center;
+        width: fit-content;
+        text-align: center;
+    } */
   }
-  .header .container .routesCont ul .routeBox {
-    margin: 20px auto;
+  .header .container .routesCont ul li {
+    margin: 3rem auto;
     text-align: center;
-    width: fit-content;
-    text-align: center;
+  }
+  .header .container .hideBar {
+    visibility: hidden;
+    opacity: 0;
   }
 }
-@media screen and (max-width: 676px) {
+@media screen and (max-width: 767px) {
   .header .container {
     display: flex;
     flex-wrap: wrap;
+    max-width: 540px !important;
+    width: 100%;
   }
   .header .container .routesCont {
     flex-basis: 100%;
@@ -103,7 +123,7 @@
     gap: 30px;
   }
   .footer .socialCont a {
-    color: black;
+    color: #545454;
     font-size: 20px;
   }
 }
