--- a/src/layouts/footer/Footer.scss
+++ b/src/layouts/footer/Footer.scss
@@ -8,7 +8,7 @@
             gap: 30px;
 
             a {
-                color: black;
+                color: #545454;
                 font-size: 20px;
 
             }
