--- a/src/layouts/header/Header.scss
+++ b/src/layouts/header/Header.scss
@@ -6,7 +6,8 @@
         .container {
             display: flex;
             justify-content: space-between;
-
+            width: 1140px;
+            margin: 0 auto;
             .logo {
 
             }
@@ -49,37 +50,17 @@
                         width: 100%
 
                     }
-                    
-                    /* 
-                    a::after {
-                        content: '';
-                        display: block;
-                        margin: auto;
-                        height: 1px;
-                        width: 0px;
-                        left: 51%;
-                        right: 51%;
-                        background: transparent;
-                        transition: width .5s ease, background-color .5s ease;
-                    }
-                    a:hover:after {
-                      width: 100%;
-                      background: black;
-                    } */
                 }
-
             }
         }
     }
-
 }
-
-
 
 @media screen and (max-width: 1200px) {
     .header {
 
         .container {
+            width: 960px;
             .burgerMenu {
             }
         }
@@ -89,43 +70,71 @@
 
 @media screen and (max-width: 999px) {
     .header {
+        position: relative;
 
         .container {
             display: flex;
             flex-wrap: wrap;
+            width: 720px;
+
+            .logo {
+                z-index: 999;
+            }
 
             
             .burgerMenu {
                 display: block;
+                z-index: 999;
+            }
 
+            .visibleBar {
+                visibility:visible;
+                opacity: 1;
             }
 
             .routesCont {
-                flex-basis: 100%;
+                position:fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: red;
+
                 // display: none;
                 ul {
                     display: block!important;
+                    width: 720px;margin: 0 auto;
+                    li {
+                        margin: 3rem auto;
+                        text-align: center;
+                    }
 
-                    .routeBox {
+                    /* .routeBox {
                         margin: 20px auto;
                         text-align: center;
                         width: fit-content;
                         text-align: center;
-                    }
+                    } */
                 }
                 
+            }
+            .hideBar {
+                visibility: hidden;
+                opacity: 0;
             }
         }
     }
 
 }
 
-@media screen and (max-width: 676px) {
+@media screen and (max-width: 767px) {
     .header {
 
         .container {
             display: flex;
             flex-wrap: wrap;
+            max-width: 540px!important;
+            width: 100%;
 
             
             .burgerMenu {
