--- a/src/layouts/header/Header.scss
+++ b/src/layouts/header/Header.scss
@@ -1,11 +1,11 @@
-
 @media screen and (max-width: 120000px) {
     .header {
-        padding: 50px 0;
+        padding: 20px 0;
 
         .container {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             width: 1140px;
             margin: 0 auto;
             .logo {
@@ -13,7 +13,95 @@
             }
             .burgerMenu {
                 display: none;
-
+                width: 26px;
+                height: 26px;
+                transition-duration: 0.5s;
+                cursor: pointer;
+                position: relative;
+    
+                .icon-left {
+                    left: 0;
+                    position: absolute;
+                    height: 3px;
+                    width: 13px;
+                    background-color: #212121;
+                  
+                  &:before{      
+                    transition-duration: 0.5s;
+                    position: absolute;
+                    width: 13px;
+                    height: 3px;
+                    background-color: #212121;
+                    content: "";
+                    top: -9px;
+                  }
+                  
+                  &:after{
+                    transition-duration: 0.5s;
+                    position: absolute;
+                    width: 13px;
+                    height: 3px;
+                    background-color: #212121;
+                    content: "";
+                    top: 9px;
+                  }
+                }
+                
+                .icon-right {
+                    position: absolute;
+                    height: 3px;
+                    width: 13px;
+                    background-color: #212121;
+                    right: 0;
+                  
+                    &:before{
+                        transition-duration: 0.5s;
+                        position: absolute;
+                        width: 13px;
+                        height: 3px;
+                        background-color: #212121;
+                        content: "";
+                        top: -9px;
+                    }
+                  
+                    &:after{
+                        transition-duration: 0.5s;
+                        position: absolute;
+                        width: 13px;
+                        height: 3px;
+                        background-color: #212121;
+                        content: "";
+                        top: 9px;
+                    }
+                }
+                
+                &.open {
+                  .icon-left {
+                    transition-duration: 0.5s;
+                    background: transparent;
+                    
+                    &:before{
+                      transform: rotateZ(45deg)  scaleX(1.2) translate(2px, 2px);
+                    }
+              
+                    &:after{
+                      transform: rotateZ(-45deg) scaleX(1.2) translate(2px, -2px);
+                    }
+                  }
+                  
+                  .icon-right {
+                    transition-duration: 0.5s;
+                    background: transparent;  
+                    
+                    &:before{
+                      transform: rotateZ(-45deg) scaleX(1.2) translate(-2px, 2px);
+                    }
+              
+                    &:after{
+                      transform: rotateZ(45deg) scaleX(1.4) translate(-2px, -2px);
+                    }
+                  }
+                }
             }
 
             .routesCont {
@@ -30,6 +118,7 @@
                         cursor: pointer;
                         text-transform: capitalize;
                         display: block;
+                        color: black;
                     }
 
                     .liBottomHover::after {
@@ -83,7 +172,9 @@
 
             
             .burgerMenu {
-                display: block;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 z-index: 999;
             }
 
@@ -99,24 +190,23 @@
                 width: 100%;
                 height: 100%;
                 background-color: red;
+                padding-top: 70px;
 
-                // display: none;
                 ul {
-                    display: block!important;
-                    width: 720px;margin: 0 auto;
+                    width: 720px;
+                    margin: 0 auto;
+                    display: block;
+                    width: fit-content;
+                    font-weight: 500;
+                    
                     li {
-                        margin: 3rem auto;
-                        text-align: center;
-                    }
-
-                    /* .routeBox {
-                        margin: 20px auto;
-                        text-align: center;
                         width: fit-content;
-                        text-align: center;
-                    } */
-                }
-                
+                        margin: 3rem auto;
+                        a {
+                            padding: 8px 15px;    
+                        }
+                    }
+                } 
             }
             .hideBar {
                 visibility: hidden;
@@ -129,6 +219,7 @@
 
 @media screen and (max-width: 767px) {
     .header {
+        margin: 0 30px;
 
         .container {
             display: flex;
@@ -143,9 +234,20 @@
 
             .routesCont {
                 flex-basis: 100%;
+                
+                padding-top: 20px;
                 // display: none;
                 ul {
                     display: block!important;
+                    max-width: 540px;
+                    width: 100%;
+                    font-size: 23px;
+                    font-weight: bold;
+                    li {
+                        a {
+                            text-transform: uppercase;
+                        }
+                    }
                 }
                 
             }
