--- a/src/layouts/footer/Footer.scss
+++ b/src/layouts/footer/Footer.scss
@@ -9,8 +9,9 @@
 
             a {
                 color: #545454;
-                font-size: 20px;
-
+                svg {
+                    font-size: 20px;
+                }
             }
         }
 
@@ -25,6 +26,20 @@
         bottom: 0px;
         right: 0px;
         width: 100%;
+        height: 60px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        backdrop-filter: blur(6px) saturate(2.5);
+        a {
+            width: 24px;
+            height:24px;
+            line-height: 24px;
+            text-align: center;
+            svg {
+                font-size: 18px!important;
 
+            }
+        }
     }
 }
