Working on Projects page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import './pages/home/Home.scss';
 @import './layouts/header/Header.scss';
 @import "./layouts/footer/Footer.scss";
+@import "./pages/projects/ProjectsPage.scss";
 
 
 @media screen and (max-width: 120000px) {
