--- a/src/App.css
+++ b/src/App.css
@@ -248,6 +248,54 @@
   }
 }
 @media screen and (max-width: 120000px) {
+  .projectPage .projectsCont {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .projectPage .projectsCont .projectCard {
+    flex-basis: 300px;
+    flex-grow: 1;
+    background-color: black;
+    position: relative;
+  }
+  .projectPage .projectsCont .projectCard img {
+    width: 100%;
+  }
+  .projectPage .projectsCont .projectCard .hoverBox {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+  }
+  .projectPage .projectsCont .projectCard .hoverBox .title {
+    font-size: 30px;
+    text-align: center;
+  }
+  .projectPage .projectsCont .projectCard .hoverBox:hover {
+    opacity: 1;
+    transition: 1ms;
+  }
+  .projectPage .projectsCont .singleProject {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.215);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+  }
+  .projectPage .projectsCont .singleProject .singleCont {
+    width: 500px;
+    height: 100%;
+    background-color: white;
+    position: fixed;
+    right: 0;
+  }
+}
+@media screen and (max-width: 120000px) {
   .mainCont {
     max-width: 1110px;
     padding: 0 15px;
