--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -46,11 +46,23 @@
                 z-index: 9999;
 
                 .singleCont {
-                    width: 500px;
+                    width: 480px;
                     height:100%;
                     background-color:white;
                     position: fixed;
                     right: 0;
+                    overflow-x: overlay;
+                    padding: 30px 30px 30px 30px;
+
+                    img {
+                        width: 100%;
+                        
+                    }
+
+                    .box {
+                        margin: 20px 0;
+
+                    }
                 }
             }
         }
