--- a/src/App.css
+++ b/src/App.css
@@ -253,11 +253,13 @@
     flex-wrap: wrap;
     gap: 20px;
   }
-  .projectPage .projectsCont .projectCard {
+  .projectPage .projectsCont .project {
     flex-basis: 300px;
     flex-grow: 1;
-    background-color: black;
+  }
+  .projectPage .projectsCont .projectCard {
     position: relative;
+    border-radius: 100px;
   }
   .projectPage .projectsCont .projectCard img {
     width: 100%;
@@ -265,18 +267,38 @@
   .projectPage .projectsCont .projectCard .hoverBox {
     position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 100%;
     opacity: 0;
     cursor: pointer;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: flex-end;
+    transition: opacity 300ms;
+    width: 90%;
+    height: 90%;
+    padding: 3% 5%;
   }
   .projectPage .projectsCont .projectCard .hoverBox .title {
     font-size: 30px;
-    text-align: center;
+    font-weight: bold;
+    color: white;
+  }
+  .projectPage .projectsCont .projectCard .hoverBox .skillsCont {
+    display: flex;
+    gap: 10px;
+  }
+  .projectPage .projectsCont .projectCard .hoverBox .skillsCont .skill {
+    background: #696869;
+    border-radius: 50px;
+    padding: 5px 10px;
+    text-transform: capitalize;
+    font-size: 14px;
+    line-height: 14px;
   }
   .projectPage .projectsCont .projectCard .hoverBox:hover {
     opacity: 1;
-    transition: 1ms;
+    transition: opacity 300ms;
+    background: linear-gradient(rgba(0, 0, 0, 0.1) 10%, rgba(0, 0, 0, 0.78) 80%);
   }
   .projectPage .projectsCont .singleProject {
     width: 100%;
@@ -288,19 +310,84 @@
     z-index: 9999;
   }
   .projectPage .projectsCont .singleProject .singleCont {
-    width: 480px;
+    width: 500px;
     height: 100%;
     background-color: white;
     position: fixed;
     right: 0;
-    overflow-x: overlay;
+    transition: all 0.3s linear 0s;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont {
     padding: 30px 30px 30px 30px;
+    overflow-x: overlay;
+    max-height: 100%;
   }
-  .projectPage .projectsCont .singleProject .singleCont img {
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .exitBox {
+    font-size: 20px !important;
+    cursor: pointer;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #EAEAEA;
+    color: #3a3a3a;
+    margin-bottom: 10px;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .singleTitle {
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont img {
     width: 100%;
+    height: 1000px;
   }
-  .projectPage .projectsCont .singleProject .singleCont .box {
-    margin: 20px 0;
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box {
+    margin: 25px 0;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box .title {
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box .describe {
+    color: gray;
+    font-size: 14px;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box .skills {
+    display: flex;
+    gap: 5px;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box .skills span {
+    padding: 5px 10px;
+    font-size: 14px;
+    line-height: 14px;
+    background-color: gray;
+    border-radius: 5px;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box .url {
+    font-weight: 500;
+    font-size: 14px;
+    color: black;
+  }
+  .projectPage .projectsCont .singleProject .singleCont .inSingleCont .footerButton {
+    position: absolute;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: capitalize;
+    bottom: 0;
+    left: 0;
+    text-decoration: none;
+    background-color: black;
+    color: white;
+    width: 100%;
+    padding: 17px;
+    cursor: pointer;
+    text-align: center;
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 767px) {
+  .projectPage .singleProject .singleCont {
+    width: 100% !important;
   }
 }
 @media screen and (max-width: 120000px) {
@@ -314,6 +401,12 @@
     width: 920px;
     margin: 0 auto;
     padding: 0 15px;
+  }
+  .mainCont .container .mainTitle {
+    font-size: 50px;
+    font-weight: bold;
+    text-transform: capitalize;
+    margin: 70px 0 20px 0;
   }
 }
 @media screen and (max-width: 1200px) {
