--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,12 @@
             margin: 0 auto;
             padding: 0 15px;
 
-
+            .mainTitle {
+                font-size: 50px;
+                font-weight: bold;
+                text-transform: capitalize;
+                margin: 70px 0 20px 0;
+            }
         }
     }
 }
