--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -6,11 +6,13 @@
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
-            .projectCard {
+            .project{
                 flex-basis: 300px;
                 flex-grow: 1;
-                background-color: black;
+            }
+            .projectCard {
                 position: relative;
+                border-radius: 100px;
                 img {
                     width: 100%
                 }
@@ -18,21 +20,41 @@
                 .hoverBox {
                     position: absolute;
                     bottom: 0;
-                    width: 100%;
-                    height: 100%;
                     opacity: 0;
                     cursor: pointer;
+                    display: flex;
+                    gap: 10px;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    transition: opacity 300ms;
+                    width: 90%;
+                    height: 90%;
+                    padding: 3% 5%;
 
                     .title {
                         font-size: 30px;
-                        text-align: center;
-                        
+                        font-weight: bold;
+                        color: white;
+                    }
+                    .skillsCont {
+                        display: flex;
+                        gap: 10px;
+
+                        .skill {
+                            background: rgb(105, 104, 105);
+                            border-radius: 50px;
+                            padding: 5px 10px;
+                            text-transform: capitalize;
+                            font-size: 14px;
+                            line-height: 14px;
+                        }
                     }
                 }
 
                 .hoverBox:hover {
                     opacity: 1;
-                    transition: 1ms;
+                    transition: opacity 300ms;
+                    background: linear-gradient(rgba(0, 0, 0, 0.1) 10%, rgba(0, 0, 0, 0.78) 80%);
                 }
     
             }
@@ -46,22 +68,87 @@
                 z-index: 9999;
 
                 .singleCont {
-                    width: 480px;
+                    width: 500px;
                     height:100%;
                     background-color:white;
                     position: fixed;
                     right: 0;
-                    overflow-x: overlay;
-                    padding: 30px 30px 30px 30px;
+                    transition: all 0.3s linear 0s;
 
-                    img {
-                        width: 100%;
-                        
-                    }
+                    .inSingleCont {
+                        padding: 30px 30px 30px 30px;
+                        overflow-x: overlay;
+                        max-height: 100%;
 
-                    .box {
-                        margin: 20px 0;
+                        .exitBox {
+                            font-size: 20px!important;
+                            cursor: pointer;
+                            padding-bottom: 10px;
+                            border-bottom: 1px solid #EAEAEA;
+                            color: #3a3a3a;
+                            margin-bottom: 10px;
+                        }
 
+                        .singleTitle {
+                            font-size: 25px;
+                            font-weight: 500;
+                            margin-bottom: 20px;
+                        }
+                        img {
+                            width: 100%;
+                            height: 1000px;
+                        }
+    
+                        .box {
+                            margin: 25px 0;
+                            .title {
+                                font-size: 18px;
+                                font-weight: 500;
+                                text-transform: capitalize;
+                                margin-bottom: 10px;
+                            }
+
+                            .describe {
+                                color: gray;
+                                font-size: 14px;
+                            }
+
+                            .skills {
+                                display: flex; 
+                                gap: 5px;
+                                span {
+                                    padding: 5px 10px;
+                                    font-size: 14px;
+                                    line-height: 14px;
+                                    background-color: gray;
+                                    border-radius: 5px;
+                                }
+                            }
+
+                            .url {
+                                font-weight: 500;
+                                font-size: 14px;
+                                color: black;
+                            }
+    
+                        }
+
+                        .footerButton {
+                            position: absolute;
+                            font-size: 14px;
+                            font-weight: bold;
+                            text-transform: capitalize;
+                            bottom: 0;
+                            left: 0;
+                            text-decoration: none;
+                            background-color: black;
+                            color: white;
+                            width: 100%;
+                            padding: 17px;
+                            cursor: pointer;
+                            text-align: center;
+                            box-sizing: border-box;
+                        }
                     }
                 }
             }
@@ -78,5 +165,11 @@
 }
 
 @media screen and (max-width: 767px) {
-
+    .projectPage {
+        .singleProject {
+            .singleCont {
+                width: 100%!important;
+            }
+        }
+    }
 }
