Completed Contact page

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import './layouts/header/Header.scss';
 @import "./layouts/footer/Footer.scss";
 @import "./pages/projects/ProjectsPage.scss";
+@import "./pages/contact/ContactPage.scss";
 
 
 @media screen and (max-width: 120000px) {
