--- a/src/App.css
+++ b/src/App.css
@@ -391,6 +391,58 @@
   }
 }
 @media screen and (max-width: 120000px) {
+  .contactPage .desc {
+    margin-bottom: 40px;
+  }
+  .contactPage .desc span {
+    font-weight: 500;
+  }
+  .contactPage .contactForm {
+    width: 550px;
+  }
+  .contactPage .contactForm .cont input {
+    width: 100%;
+    height: 50px;
+    padding: 0px 20px;
+  }
+  .contactPage .contactForm .cont textarea {
+    resize: none;
+    width: 100%;
+    height: 200px;
+    padding: 20px;
+    font-family: "";
+  }
+  .contactPage .contactForm .cont .samething {
+    font-size: 16px;
+    box-sizing: border-box;
+    outline: none;
+    border: 1px solid black;
+    margin-bottom: 30px;
+    border-radius: 4px;
+  }
+  .contactPage .contactForm button {
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    background-color: black;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .contactPage .contactForm {
+    width: 460px;
+  }
+}
+@media screen and (max-width: 999px) {
+  .contactPage .contactForm {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 120000px) {
   .mainCont {
     max-width: 1110px;
     padding: 0 15px;
