--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 @import "./layouts/footer/Footer.scss";
 @import "./pages/projects/ProjectsPage.scss";
 @import "./pages/contact/ContactPage.scss";
-
+@import "./pages/resume/ResumePage.scss";
 
 @media screen and (max-width: 120000px) {
     .mainCont {
