--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ $back2: #0a192f;
     body {
         background-color: $back1;
         color: #8d8d8d;
+        font-family: sans-serif;
     }
     .mainCont {
         max-width: 1110px;
