--- a/src/layouts/header/Header.scss
+++ b/src/layouts/header/Header.scss
@@ -9,7 +9,7 @@
             width: 1140px;
             margin: 0 auto;
             .logo {
-
+                
             }
             .burgerMenu {
                 display: none;
@@ -112,10 +112,7 @@
                     padding: 0;
                     margin: 0;
                     .routeActive {
-                        border-bottom: 1px solid white;
-                        a {
-                            color: white;
-                        }
+                        border-bottom: 1px solid #08fdd8;
                     }
 
                     a {
@@ -233,7 +230,7 @@
 
 @media screen and (max-width: 767px) {
     .header {
-        margin: 0 30px;
+        margin: 0 15px;
 
         .container {
             display: flex;
