--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import "./pages/projects/ProjectsPage.scss";
 @import "./pages/contact/ContactPage.scss";
 @import "./pages/resume/ResumePage.scss";
+@import "./pages/about/AboutPage.scss";
 
 $light: white;
 $dark: black;
