--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -14,12 +14,19 @@
         
         .routediv {
             margin-top: 10px;
+            line-height: 2.3;
             a {
                 text-decoration: none;
                 color: #08fdd8;
                 margin: 0 3px;
+                padding: 0 12px;
+            }
+            a:hover {
+                background: red;
             }
         }
+
+
     }
 
 }
