--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,16 @@
   }
   .homePage .routediv {
     margin-top: 10px;
+    line-height: 2.3;
   }
   .homePage .routediv a {
     text-decoration: none;
     color: #08fdd8;
     margin: 0 3px;
+    padding: 0 12px;
+  }
+  .homePage .routediv a:hover {
+    background: red;
   }
 }
 @media screen and (max-width: 590px) {
@@ -31,6 +36,7 @@
 @media screen and (max-width: 120000px) {
   .header {
     padding: 20px 0;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
   .header .container {
     display: flex;
@@ -213,7 +219,7 @@
 }
 @media screen and (max-width: 767px) {
   .header {
-    margin: 0 15px;
+    padding: 20px 15px;
   }
   .header .container {
     display: flex;
@@ -238,7 +244,7 @@
 }
 @media screen and (max-width: 12000px) {
   .footer {
-    margin-top: 60px;
+    margin-top: 50px;
     padding: 20px 0;
   }
   .footer .socialCont {
@@ -254,6 +260,7 @@
 }
 @media screen and (max-width: 999px) {
   .socialCont {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: fixed;
     display: flex;
     justify-content: space-between;
