--- a/src/layouts/footer/Footer.scss
+++ b/src/layouts/footer/Footer.scss
@@ -1,7 +1,7 @@
 
 @media screen and (max-width: 12000px) {
     .footer {
-        margin-top: 60px;
+        margin-top: 50px;
         padding: 20px 0;
 
         .socialCont {
@@ -21,6 +21,7 @@
 
 @media screen and (max-width: 999px) {
     .socialCont {
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         position: fixed;
         display: flex;
         justify-content: space-between;
