--- a/src/layouts/header/Header.scss
+++ b/src/layouts/header/Header.scss
@@ -1,7 +1,10 @@
 @media screen and (max-width: 120000px) {
     .header {
         padding: 20px 0;
-
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        // box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        // box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         .container {
             display: flex;
             justify-content: space-between;
@@ -230,7 +233,7 @@
 
 @media screen and (max-width: 767px) {
     .header {
-        margin: 0 15px;
+        padding: 20px 15px;
 
         .container {
             display: flex;
