--- a/src/App.css
+++ b/src/App.css
@@ -215,6 +215,7 @@
   .header .container .hideBar {
     visibility: hidden;
     opacity: 0;
+    transition-duration: 1s;
   }
 }
 @media screen and (max-width: 767px) {
@@ -542,6 +543,15 @@
     background-color: #1d1d1d;
     color: #8d8d8d;
     font-family: sans-serif;
+  }
+
+  .transparent-website {
+    transition-duration: 3s;
+  }
+
+  .activetr {
+    visibility: none;
+    opacity: 0;
   }
 
   .mainCont {
