--- a/src/App.css
+++ b/src/App.css
@@ -348,6 +348,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.215);
+    color: black;
     position: fixed;
     left: 0;
     top: 0;
@@ -381,7 +382,7 @@
   }
   .projectPage .projectsCont .singleProject .singleCont .inSingleCont img {
     width: 100%;
-    height: 1000px;
+    height: 300px;
   }
   .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box {
     margin: 25px 0;
@@ -553,15 +554,15 @@
   }
 
   .transparent-website {
-    /* transition-duration: 0.5s;
+    transition-duration: 0.5s;
     visibility: visible;
-    opacity: 1; */
+    opacity: 1;
   }
 
   .activetr {
     visibility: hidden;
     opacity: 0;
-    transition-duration: 0.5s;
+    display: none;
   }
 
   .mainCont {
