--- a/src/App.scss
+++ b/src/App.scss
@@ -20,15 +20,16 @@ $back2: #0a192f;
         font-family: sans-serif;
     }
     .transparent-website {
-        /* transition-duration: 0.5s;
+        transition-duration: 0.5s;
         visibility: visible;
-        opacity: 1; */
+        opacity: 1;
     }
 
     .activetr {
         visibility:hidden;
         opacity: 0;
-        transition-duration: 0.5s;
+        // transition-duration: 0.5s;
+        display: none;
     }
     .mainCont {
         max-width: 1110px;
