--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -62,6 +62,7 @@
                 width: 100%;
                 height: 100%;
                 background-color: rgba(0, 0, 0, 0.215);
+                color: black;
                 position: fixed;
                 left: 0;
                 top: 0;
@@ -96,7 +97,7 @@
                         }
                         img {
                             width: 100%;
-                            height: 1000px;
+                            height: 300px;
                         }
     
                         .box {
