--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -6,6 +6,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
+            margin-top: 80px;
             .project{
                 flex-basis: 300px;
                 flex-grow: 1;
@@ -14,7 +15,9 @@
                 position: relative;
                 border-radius: 100px;
                 img {
-                    width: 100%
+                    width: 100%;
+                    height: 300px;
+                    object-fit: cover;
                 }
 
                 .hoverBox {
@@ -98,6 +101,8 @@
                         img {
                             width: 100%;
                             height: 300px;
+                            object-fit: contain;
+                            
                         }
     
                         .box {
