Fixed Transition problems

--- a/src/layouts/footer/Footer.scss
+++ b/src/layouts/footer/Footer.scss
@@ -2,11 +2,12 @@
 @media screen and (max-width: 12000px) {
     .footer {
         margin-top: 50px;
+        margin-bottom: 30px;
         padding: 20px 0;
 
         .socialCont {
             display: flex;
-            gap: 30px;
+            gap: 50px;
 
             a {
                 color: #8d8d8d;
