--- a/src/App.css
+++ b/src/App.css
@@ -252,11 +252,12 @@
 @media screen and (max-width: 12000px) {
   .footer {
     margin-top: 50px;
+    margin-bottom: 30px;
     padding: 20px 0;
   }
   .footer .socialCont {
     display: flex;
-    gap: 30px;
+    gap: 50px;
   }
   .footer .socialCont a {
     color: #8d8d8d;
