--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
     text-transform: capitalize;
     color: white;
     margin-top: 100px;
+    letter-spacing: normal;
   }
   .homePage .dit1 {
     margin-top: 10px;
@@ -17,11 +18,9 @@
   .homePage .routediv a {
     text-decoration: none;
     color: #08fdd8;
-    margin: 0 3px;
-    padding: 0 12px;
   }
   .homePage .routediv a:hover {
-    background: red;
+    text-decoration: underline;
   }
 }
 @media screen and (max-width: 999px) {
@@ -304,7 +303,7 @@
   }
   .projectPage .projectsCont .projectCard {
     position: relative;
-    border-radius: 100px;
+    height: 300px;
   }
   .projectPage .projectsCont .projectCard img {
     width: 100%;
@@ -321,9 +320,10 @@
     flex-direction: column;
     justify-content: flex-end;
     transition: opacity 300ms;
-    width: 90%;
-    height: 90%;
-    padding: 3% 5%;
+    width: 100%;
+    height: 100%;
+    padding: 24px 32px;
+    box-sizing: border-box;
   }
   .projectPage .projectsCont .projectCard .hoverBox .title {
     font-size: 30px;
@@ -332,15 +332,18 @@
   }
   .projectPage .projectsCont .projectCard .hoverBox .skillsCont {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
+    letter-spacing: normal;
   }
   .projectPage .projectsCont .projectCard .hoverBox .skillsCont .skill {
-    background: #696869;
-    border-radius: 50px;
+    background: #08fdd879;
+    border-radius: 20px;
     padding: 5px 10px;
     text-transform: capitalize;
     font-size: 14px;
     line-height: 14px;
+    color: white;
   }
   .projectPage .projectsCont .projectCard .hoverBox:hover {
     opacity: 1;
@@ -534,12 +537,12 @@
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    width: 300px;
+    width: 350px;
     margin-top: 10px;
   }
   .aboutPage .skillCont .skills li {
     padding-left: 20px;
-    flex-basis: 100px;
+    flex-basis: 120px;
     flex-grow: 1;
     position: relative;
   }
@@ -550,11 +553,18 @@
     color: #08fdd8;
   }
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @media screen and (max-width: 120000px) {
   body {
     background-color: #1d1d1d;
     color: #8d8d8d;
-    font-family: sans-serif;
+    font-family: system-ui;
+    letter-spacing: 1px;
   }
 
   .mainCont {
@@ -566,7 +576,6 @@
   .mainCont .container {
     width: 920px;
     margin: 0 auto;
-    padding: 0 15px;
   }
   .mainCont .container .mainTitle {
     font-size: 50px;
