--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -13,7 +13,9 @@
             }
             .projectCard {
                 position: relative;
-                border-radius: 100px;
+                height: 300px;
+
+
                 img {
                     width: 100%;
                     height: 300px;
@@ -30,9 +32,10 @@
                     flex-direction: column;
                     justify-content: flex-end;
                     transition: opacity 300ms;
-                    width: 90%;
-                    height: 90%;
-                    padding: 3% 5%;
+                    width: 100%;
+                    height: 100%;
+                    padding: 24px 32px;
+                    box-sizing: border-box;
 
                     .title {
                         font-size: 30px;
@@ -41,15 +44,18 @@
                     }
                     .skillsCont {
                         display: flex;
+                        flex-wrap: wrap;
                         gap: 10px;
+                        letter-spacing: normal;
 
                         .skill {
-                            background: rgb(105, 104, 105);
-                            border-radius: 50px;
+                            background: #08fdd879;
+                            border-radius: 20px;
                             padding: 5px 10px;
                             text-transform: capitalize;
                             font-size: 14px;
                             line-height: 14px;
+                            color: white;
                         }
                     }
                 }
