--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,11 @@
   }
   .header .container .logo {
     z-index: 999;
+    width: 30px;
+    height: 30px;
+  }
+  .header .container .logo img {
+    width: 100%;
   }
   .header .container .burgerMenu {
     display: flex;
@@ -278,7 +283,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    backdrop-filter: blur(6px) saturate(2.5);
+    backdrop-filter: blur(10px) saturate(2.5);
   }
   .socialCont a {
     width: 24px;
@@ -353,7 +358,7 @@
   .projectPage .projectsCont .singleProject {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.215);
+    background-color: rgba(0, 0, 0, 0.8);
     color: black;
     position: fixed;
     left: 0;
@@ -363,10 +368,21 @@
   .projectPage .projectsCont .singleProject .singleCont {
     width: 500px;
     height: 100%;
-    background-color: white;
+    background-color: #1d1d1d;
+    color: white;
     position: fixed;
     right: 0;
-    transition: all 0.3s linear 0s;
+    animation-name: move;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+  }
+  @keyframes move {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(0%);
+    }
   }
   .projectPage .projectsCont .singleProject .singleCont .inSingleCont {
     padding: 30px 30px 30px 30px;
