--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -70,7 +70,7 @@
             .singleProject {
                 width: 100%;
                 height: 100%;
-                background-color: rgba(0, 0, 0, 0.215);
+                background-color: rgba(0, 0, 0, 0.8);
                 color: black;
                 position: fixed;
                 left: 0;
@@ -80,10 +80,25 @@
                 .singleCont {
                     width: 500px;
                     height:100%;
-                    background-color:white;
+                    background-color:#1d1d1d;
+                    color: white;
                     position: fixed;
                     right: 0;
-                    transition: all 0.3s linear 0s;
+                    animation-name: move;
+                    animation-duration: 0.5s;
+                    animation-fill-mode: both;
+
+                    @keyframes move {
+                        0% {
+                            transform: translateX(100%)
+                        }
+                        100% {
+                            transform: translateX(0%)
+                        }
+                        
+                    }
+            
+
 
                     .inSingleCont {
                         padding: 30px 30px 30px 30px;
