--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -110,7 +110,7 @@
                             cursor: pointer;
                             padding-bottom: 10px;
                             border-bottom: 1px solid #EAEAEA;
-                            color: #3a3a3a;
+                            color: white;
                             margin-bottom: 10px;
                         }
 
@@ -128,13 +128,17 @@
     
                         .box {
                             margin: 25px 0;
+                            span {
+                                display: flex;
+                                gap: 10px;
+                                align-items: center;
+    
+                            }
                             .title {
                                 font-size: 18px;
                                 font-weight: 500;
                                 text-transform: capitalize;
-                                margin-bottom: 10px;
                             }
-
                             .describe {
                                 color: gray;
                                 font-size: 14px;
@@ -155,14 +159,14 @@
                             .url {
                                 font-weight: 500;
                                 font-size: 14px;
-                                color: black;
+                                color: #08fdd8;
                             }
     
                         }
 
                         .footerButton {
                             position: absolute;
-                            font-size: 14px;
+                            font-size: 15px;
                             font-weight: bold;
                             text-transform: capitalize;
                             bottom: 0;
@@ -171,10 +175,18 @@
                             background-color: black;
                             color: white;
                             width: 100%;
-                            padding: 17px;
+                            padding: 20px;
                             cursor: pointer;
                             text-align: center;
-                            box-sizing: border-box;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 10px;
+
+                        }
+
+                        .footerButton:hover {
+                            text-decoration: underline;
                         }
                     }
                 }
@@ -187,15 +199,23 @@
 
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1024px) {
 
 }
 
 @media screen and (max-width: 767px) {
     .projectPage {
-        .singleProject {
-            .singleCont {
-                width: 100%!important;
+        .projectsCont {
+            .projectCard {
+                .hoverBox {
+                    opacity: 1;
+                    background: linear-gradient(rgba(0, 0, 0, 0.1) 10%, rgba(0, 0, 0, 0.78) 80%);
+                }
+            }
+            .singleProject {
+                .singleCont {
+                    width: 100%;
+                }
             }
         }
     }
