--- a/src/layouts/header/Header.scss
+++ b/src/layouts/header/Header.scss
@@ -136,7 +136,7 @@
                         left: 51%;
                         right: 51%;
                         height: 1px;
-                        width: 0px;
+                        widt: 0px;
                         transition-duration: 0.3s;
                         transition-timing-function:cubic-bezier(0.39, 0.575, 0.565, 1);
 
