--- a/src/pages/about/AboutPage.scss
+++ b/src/pages/about/AboutPage.scss
@@ -1,7 +1,12 @@
 @media screen and (max-width: 120000px) {
     .aboutPage {
+        .mainDescribe {
+            margin-top: 30px;
+            line-height: 1.5;
+        }
         .skillCont {
-            margin-top: 20px;
+            margin-top: 30px;
+            line-height: 1.5;
             .div1 {
 
             }
