--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,12 @@
     letter-spacing: normal;
   }
   .homePage .dit1 {
-    margin-top: 10px;
+    margin-top: 30px;
+    line-height: 1.5;
   }
   .homePage .routediv {
-    margin-top: 10px;
-    line-height: 2.3;
+    margin-top: 30px;
+    line-height: 1.5;
   }
   .homePage .routediv a {
     text-decoration: none;
@@ -160,7 +161,7 @@
     left: 51%;
     right: 51%;
     height: 1px;
-    width: 0px;
+    widt: 0px;
     transition-duration: 0.3s;
     transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
   }
@@ -324,12 +325,14 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
+    border-radius: 10px;
   }
   .projectPage .projectsCont .projectCard .hoverBox {
     position: absolute;
     bottom: 0;
     opacity: 0;
     cursor: pointer;
+    border-radius: 10px;
     display: flex;
     gap: 10px;
     flex-direction: column;
@@ -352,7 +355,7 @@
     letter-spacing: normal;
   }
   .projectPage .projectsCont .projectCard .hoverBox .skillsCont .skill {
-    background: #08fdd879;
+    background: #696869;
     border-radius: 20px;
     padding: 5px 10px;
     text-transform: capitalize;
@@ -418,7 +421,10 @@
     object-fit: contain;
   }
   .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box {
-    margin: 25px 0;
+    margin: 30px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
   .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box span {
     display: flex;
@@ -442,7 +448,7 @@
     padding: 5px 10px;
     font-size: 14px;
     line-height: 14px;
-    background-color: gray;
+    background-color: #696869;
     border-radius: 5px;
   }
   .projectPage .projectsCont .singleProject .singleCont .inSingleCont .box .url {
@@ -568,8 +574,13 @@
 }
 
 @media screen and (max-width: 120000px) {
+  .aboutPage .mainDescribe {
+    margin-top: 30px;
+    line-height: 1.5;
+  }
   .aboutPage .skillCont {
-    margin-top: 20px;
+    margin-top: 30px;
+    line-height: 1.5;
   }
   .aboutPage .skillCont .skills {
     list-style-type: none;
