--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -20,6 +20,7 @@
                     width: 100%;
                     height: 300px;
                     object-fit: cover;
+                    border-radius: 10px;
                 }
 
                 .hoverBox {
@@ -27,6 +28,7 @@
                     bottom: 0;
                     opacity: 0;
                     cursor: pointer;
+                    border-radius: 10px;
                     display: flex;
                     gap: 10px;
                     flex-direction: column;
@@ -49,7 +51,7 @@
                         letter-spacing: normal;
 
                         .skill {
-                            background: #08fdd879;
+                            background: #696869;
                             border-radius: 20px;
                             padding: 5px 10px;
                             text-transform: capitalize;
@@ -127,7 +129,10 @@
                         }
     
                         .box {
-                            margin: 25px 0;
+                            margin: 30px 0;
+                            display: flex;
+                            flex-direction: column;
+                            gap: 10px;
                             span {
                                 display: flex;
                                 gap: 10px;
@@ -151,7 +156,7 @@
                                     padding: 5px 10px;
                                     font-size: 14px;
                                     line-height: 14px;
-                                    background-color: gray;
+                                    background-color: #696869;
                                     border-radius: 5px;
                                 }
                             }
